src/test/deca/context/invalid/compClass3.deca
class A {

}

class B extends A {

}

class C extends Objects {

}

{
    A a = new A();
    B b = new B();
    C c = new C();

    if (a > b) {

    }
}
//ERROR :18: